--- a/challenge-03.html
+++ b/challenge-03.html
@@ -151,14 +151,9 @@
         <span>Admin</span>
       </label>
 
-      <label>
-        <input type="radio" name="role" value="Editor" /> Editor</label>
-
-        <label>
-          <input type="radio" name="role" value="Contributor" /> Contributor</label>
-
+          <label><input type="radio" name="role" value="Editor" /> Editor</label>
+          <label><input type="radio" name="role" value="Contributor" /> Contributor</label>
           <label><input type="checkbox" name="public"> Public Bio</label>
-
         </div>
 
         <div class="bio">
